--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Nunito Sans" rel="stylesheet">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>Migus Dot Org</title>
+<title>adam@migus.org</title>
 
     <link rel="stylesheet" href="/css/main.css">
 
@@ -44,15 +44,14 @@
   <main>
     
   <h1>migus.org</h1>
-  <p>My name is Adam <em>Migus</em> and, yes, &ldquo;adam&rdquo; at this domain is my email address! 📧</p>
-<p>I bought this domain to host my email back doing that on <em>your last name</em> .org was a thing.
-Keep in mind that it was 2001 so Gmail didn&rsquo;t exist yet.
-Yahoo Mail did but I liked UNIX more so I decided to build my own server instead! 🤪</p>
-<p>Nowadays, I use &ldquo;amigus&rdquo; as a handle on a lot of sites including
+  <p>My name is Adam <em>Migus</em> and, yes, <em>adam</em> at this domain is my email address.
+I bought this domain to host my email back in 2001 when doing that on <em>your last name</em> .org was a thing.
+Nowadays, I use <em>amigus</em> as a handle on a lot of sites including
 <a href="https://github.com/amigus/">GitHub</a>,
 <a href="https://www.linkedin.com/in/amigus/">LinkedIn</a>,
-<a href="https://x.com/amigus/">X</a> and, nowadays, Gmail too. 😆</p>
-<p>Did you read this whole page? Wow, thanks! 🙏</p>
+<a href="https://x.com/amigus/">X</a>.
+I also use various &ldquo;secure&rdquo; messaging apps but I&rsquo;m oldshool so please use my <a href="public.asc">GPG key</a> for private messaging.</p>
+<p>Thanks for reading this HTML page! 🙏</p>
 
 
   </main>
