--- a/public/index.html
+++ b/public/index.html
@@ -50,13 +50,13 @@
     
   <h1>migus.org</h1>
   <p><strong>Yes, <em>adam</em> at this domain is my email address!</strong></p>
-<p>I registered this domain to host my email in 2002.
+<p>I registered this domain to host my email in March 2002.
 Back then doing that on <em>yourlastname.org</em> was a thing!
-Nowadays, I use <em>amigus</em> as a handle on sites like
+Nowadays, I also use <em>amigus</em> as a handle on sites like
 <a href="https://github.com/amigus/">GitHub</a>,
 <a href="https://www.linkedin.com/in/amigus/">LinkedIn</a>,
 <a href="https://x.com/amigus/">X</a>
-where you can verify my
+where, incidentally, you can check my
 <a href="public.asc">GPG public key</a> fingerprint.</p>
 
 
