--- a/public/index.html
+++ b/public/index.html
@@ -49,15 +49,24 @@
   <main>
     
   <h1>migus.org</h1>
-  <p><strong>Yes, <em>adam</em> at this domain is my email address!</strong></p>
-<p>I registered this domain to host my email in March 2002.
-Back then doing that on <em>yourlastname.org</em> was a thing!
-Nowadays, I also use <em>amigus</em> as a handle on sites like
+  <p>Yes, &ldquo;adam&rdquo; at this domain <em>is</em> my email address!</p>
+<p>I registered this domain to host my email in March 2002 when doing that with &ldquo;yourlastname.org&rdquo; was a thing!
+Nowadays, I also use &ldquo;amigus&rdquo; as a handle on sites like
 <a href="https://github.com/amigus/">GitHub</a>,
 <a href="https://www.linkedin.com/in/amigus/">LinkedIn</a>,
-<a href="https://x.com/amigus/">X</a>
-where, incidentally, you can check my
-<a href="public.asc">GPG public key</a> fingerprint.</p>
+<a href="https://x.com/amigus/">X</a>,
+where, incidentally, you can check the fingerprint of my GPG
+<a href="public.asc">key</a>.</p>
+<p>I write software and publish some of handy things in <a href="https://gist.github.com/amigus">Gists</a>.
+I use <a href="https://gist.github.com/amigus/555b34d0b1c872c33f3fee55c7ed17e9">ByteCalculationFunctions.ps1</a>
+and <a href="https://gist.github.com/amigus/9b68b2e25f5876505d4b81987bd05055">Create-VM.ps1</a>
+all the time!
+I manage servers so I publish things like this
+<a href="https://gist.github.com/amigus/fb747e3b3630c496d79a4d9e089b5309">Makefile</a>
+that creates a boilerplate OpenLDAP 2.4.x server.
+And I maintain this
+<a href="https://github.com/amigus/cyrus-imap-server">cyrus-imap-server</a>
+setup which hosts my email.</p>
 
 
   </main>
