--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@ where, incidentally, you can check the fingerprint of my GPG
 I also maintain servers and publish my email server configuration in a public
 <a href="https://github.com/amigus/cyrus-imap-server">repository</a> on my
 <a href="https://github.com/amigus">GitHub</a> so check that out!</p>
-<p>Thanks for taking the time to read this page. 😊👋</p>
+<p>Thanks for taking the time to read this page. &#x1f603;&#x1f44b;</p>
 
 
   </main>
