--- a/public/index.html
+++ b/public/index.html
@@ -50,17 +50,17 @@
   <main>
     
   <h1>migus.org</h1>
-  <p>Yes, &ldquo;adam&rdquo; at this domain <em>is</em> my email address!</p>
+  <p>Yes, &ldquo;adam&rdquo; at this domain <em>is</em> my email address! &#x1f4e7;</p>
 <p>I registered this domain to host my email in March 2002 when doing that with &ldquo;yourlastname.org&rdquo; was a thing!
 Nowadays, I also use &ldquo;amigus&rdquo; as a handle on sites like
 <a href="https://www.linkedin.com/in/amigus/">LinkedIn</a> and,
 <a href="https://x.com/amigus/">X</a>,
 where, incidentally, you can check the fingerprint of my GPG
-<a href="public.asc">key</a>.</p>
+<a href="public.asc">key</a>. &#x1f50f;</p>
 <p>I write software and publish some of it in <a href="https://gist.github.com/amigus">Gists</a>.
-I also maintain servers and publish my email server configuration in a public
-<a href="https://github.com/amigus/cyrus-imap-server">repository</a> on my
-<a href="https://github.com/amigus">GitHub</a> so check that out!</p>
+I also publish the scripts that build my email server in a public
+<a href="https://github.com/amigus/cyrus-imap-server">repo</a> on my
+<a href="https://github.com/amigus">GitHub</a>! &#x1f913;</p>
 <p>Thanks for taking the time to read this page. &#x1f603;&#x1f44b;</p>
 
 
