Add some Javascript.

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="/css/main.css">
 
 
+      <script src="/js/main.js"></script>
+
+
   
     
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-0H4BE185DF"></script>
@@ -52,12 +55,19 @@ where, by the way, you can check the fingerprint of my GPG
 I also publish the scripts that build my email server in a public
 <a href="https://github.com/amigus/cyrus-imap-server">repo</a> on my
 <a href="https://github.com/amigus">GitHub</a>! &#x1f913;</p>
-<p>Thanks for taking the time to read this page. &#x1f44b;</p>
+<p>I lead <a href="https://migusgroup.com">The Migus Group</a>.
+It helps companies improve their cybersecurity through risk reduction and resiliency. &#x1f454;</p>
 
 
   </main>
   <footer>
-    <div id="copyright">©️ 2024 Adam Migus. All rights reserved.</div>
+    <div id="redirect">
+    <input type="checkbox" id="redirect_cb">
+    <label for="redirect_cb">Do not redirect this page to one of the links above--I like staring at it!</label>
+</div>
+<div id="copyright">
+    <p>©️ 2024 Adam Migus. All rights reserved.</p>
+</div>
 
   </footer>
 </body>
