--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
     
   <h1>migus.org</h1>
   <p>Hi, I&rsquo;m <a href="adam">Adam</a> and my name at this domain <em>is</em> my email address! &#x1f4e7;</p>
-<p>I registered it in March 2002 to host said email.
-Doing that with &ldquo;yourlastname.org&rdquo; cool back then. &#x1f913;</p>
+<p>I registered this domain back in March 2002.
+Hosting your email on &ldquo;yourlastname.org&rdquo; was cool back then! &#x1f913;</p>
 
 
   </main>
