adam.md -> adam/_index.md

--- a/public/adam/index.html
+++ b/public/adam/index.html
@@ -43,7 +43,7 @@
   <main>
     
   <h1>adam@migus.org</h1>
-  <p>I am Founder and CEO of <a href="https://migusgroup.com">The Migus Group</a>. &#x1f454;</p>
+  <p>I am the CEO of <a href="https://migusgroup.com">The Migus Group</a> since funding the company in February 2014. &#x1f454;</p>
 <p>I have public profiles as &ldquo;amigus&rdquo; on
 <a href="https://www.linkedin.com/in/amigus/">LinkedIn</a> and
 <a href="https://x.com/amigus/">X</a>
